v1.2.4: Fixed right side whitespace for mobile
v1.2.4: Fixed right side whitespace for mobile

Bug fixes:
- Fixed huge whitespace on the right side of page that could be scrolled on mobile.

Note:
- Possibly (very) bad fix...

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Don't ask */
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 .btn {
   text-transform: none;
 }
